// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPlans component should display a custom plan 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <CardDeck
      className="mb-5"
      tag="div"
    >
      <Plan
        callToAction={null}
        features={null}
        isCurrentPlan={true}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        onClick={[Function]}
        plan={
          Immutable.Map {
            public: true,
            name: "custom plan",
            free_tickets: 100,
            currencySign: "$",
            integrations: 10,
          }
        }
        showFooter={true}
      />
    </CardDeck>
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be on email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each agent in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
            <dt>
              I need help integrating an app with Gorgias. Is that included in my plan?
            </dt>
            <dd>
              Yes. We're happy to help you add your own integrations at no additional cost.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should display matching current plan 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <CardDeck
      className="mb-5"
      tag="div"
    >
      <Plan
        callToAction={null}
        features={null}
        isCurrentPlan={true}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        onClick={[Function]}
        plan={
          Immutable.Map {
            public: true,
            name: "my plan",
            free_tickets: 100,
            currencySign: "$",
            integrations: 10,
          }
        }
        showFooter={true}
      />
      <Plan
        callToAction={
          <Button
            color="link"
            onClick={[Function]}
            tag="button"
          >
            Contact Us
          </Button>
        }
        features={
          <ul>
            <li>
              <i
                className="material-icons feature-icon"
              >
                all_inclusive
              </i>
               
              <strong>
                Unlimited
              </strong>
               agents
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                arrow_downward
              </i>
               
              Discounted prices for volumes of
              <strong>
                10, 000+
              </strong>
               tickets
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                beach_access
              </i>
               
              Premium support
            </li>
          </ul>
        }
        isCurrentPlan={false}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        onClick={null}
        plan={
          Immutable.Map {
            name: "Enterprise",
          }
        }
        showFooter={true}
      />
    </CardDeck>
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be on email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each agent in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
            <dt>
              I need help integrating an app with Gorgias. Is that included in my plan?
            </dt>
            <dd>
              Yes. We're happy to help you add your own integrations at no additional cost.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should display multiple plans 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/billing"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Plans
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <CardDeck
      className="mb-5"
      tag="div"
    >
      <Plan
        callToAction={null}
        features={null}
        isCurrentPlan={true}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        onClick={[Function]}
        plan={
          Immutable.Map {
            public: true,
            name: "my plan",
            free_tickets: 100,
            currencySign: "$",
            integrations: 10,
          }
        }
        showFooter={true}
      />
      <Plan
        callToAction={null}
        features={null}
        isCurrentPlan={false}
        isFeatured={true}
        isTrialing={false}
        isUpdating={false}
        onClick={[Function]}
        plan={
          Immutable.Map {
            public: true,
            name: "my second plan",
            free_tickets: 1000,
            currencySign: "$",
            integrations: 100,
          }
        }
        showFooter={true}
      />
      <Plan
        callToAction={
          <Button
            color="link"
            onClick={[Function]}
            tag="button"
          >
            Contact Us
          </Button>
        }
        features={
          <ul>
            <li>
              <i
                className="material-icons feature-icon"
              >
                all_inclusive
              </i>
               
              <strong>
                Unlimited
              </strong>
               agents
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                arrow_downward
              </i>
               
              Discounted prices for volumes of
              <strong>
                10, 000+
              </strong>
               tickets
            </li>
            <li>
              <i
                className="material-icons feature-icon"
              >
                beach_access
              </i>
               
              Premium support
            </li>
          </ul>
        }
        isCurrentPlan={false}
        isFeatured={false}
        isTrialing={false}
        isUpdating={false}
        onClick={null}
        plan={
          Immutable.Map {
            name: "Enterprise",
          }
        }
        showFooter={true}
      />
    </CardDeck>
    <div
      style={
        Object {
          "maxWidth": 900,
        }
      }
    >
      <h3
        className="mb-4"
      >
        Frequently asked questions
      </h3>
      <Row
        className="faq"
        tag="div"
      >
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              What's a ticket?
            </dt>
            <dd>
              A ticket is a conversation with a customer, on any channel. It can be on email, phone, chat, etc.
              <br />
              Usage only includes tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay for all tickets received?
            </dt>
            <dd>
              No! You only pay for tickets that contain a response sent from Gorgias.
            </dd>
            <dt>
              Do I need to pay extra for chat?
            </dt>
            <dd>
              No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
            </dd>
          </dl>
        </Col>
        <Col
          sm={6}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <dl>
            <dt>
              I don’t know how many tickets I get per month. Can you help?
            </dt>
            <dd>
              Sure. You probably receive about 1,000 tickets for each agent in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
            </dd>
            <dt>
              What level of support is included in my plan?
            </dt>
            <dd>
              We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
            </dd>
            <dt>
              I need help integrating an app with Gorgias. Is that included in my plan?
            </dt>
            <dd>
              Yes. We're happy to help you add your own integrations at no additional cost.
            </dd>
          </dl>
        </Col>
      </Row>
    </div>
  </Container>
</div>
`;

exports[`BillingPlans component should load with empty props 1`] = `
<BillingPlans
  currentPlan={
    Immutable.Map {
    }
  }
  isAllowedToChangePlan={[Function]}
  notify={[Function]}
  plans={
    Immutable.Map {
    }
  }
  subscription={
    Immutable.Map {
      plan: "some-plan",
    }
  }
  updateSubscription={[Function]}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          tag="ol"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              className="section"
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/billing"
            >
              Billing & Usage
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          >
            Plans
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          tag="ol"
        >
          <ol
            className="breadcrumb"
          >
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                <Link
                  className="section"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/billing"
                >
                  <a
                    className="section"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Billing & Usage
                  </a>
                </Link>
              </li>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                Plans
              </li>
            </BreadcrumbItem>
          </ol>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <CardDeck
          className="mb-5"
          tag="div"
        >
          <div
            className="mb-5 card-deck"
          >
            <Plan
              callToAction={
                <Button
                  color="link"
                  onClick={[Function]}
                  tag="button"
                >
                  Contact Us
                </Button>
              }
              features={
                <ul>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      all_inclusive
                    </i>
                     
                    <strong>
                      Unlimited
                    </strong>
                     agents
                  </li>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      arrow_downward
                    </i>
                     
                    Discounted prices for volumes of
                    <strong>
                      10, 000+
                    </strong>
                     tickets
                  </li>
                  <li>
                    <i
                      className="material-icons feature-icon"
                    >
                      beach_access
                    </i>
                     
                    Premium support
                  </li>
                </ul>
              }
              isCurrentPlan={false}
              isFeatured={false}
              isTrialing={false}
              isUpdating={false}
              onClick={null}
              plan={
                Immutable.Map {
                  name: "Enterprise",
                }
              }
              showFooter={true}
            >
              <Card
                className="plan plan-Enterprise"
                outline={true}
                tag="div"
              >
                <div
                  className="plan plan-Enterprise card"
                >
                  <CardHeader
                    className="plan-header"
                    tag="div"
                  >
                    <div
                      className="plan-header card-header"
                    >
                      <div
                        className="header-text"
                      >
                        <strong>
                          Enterprise
                        </strong>
                      </div>
                    </div>
                  </CardHeader>
                  <CardBody
                    tag="div"
                  >
                    <div
                      className="card-body"
                    >
                      <ul>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            all_inclusive
                          </i>
                           
                          <strong>
                            Unlimited
                          </strong>
                           agents
                        </li>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            arrow_downward
                          </i>
                           
                          Discounted prices for volumes of
                          <strong>
                            10, 000+
                          </strong>
                           tickets
                        </li>
                        <li>
                          <i
                            className="material-icons feature-icon"
                          >
                            beach_access
                          </i>
                           
                          Premium support
                        </li>
                      </ul>
                    </div>
                  </CardBody>
                  <CardFooter
                    tag="div"
                  >
                    <div
                      className="card-footer"
                    >
                      <Button
                        color="link"
                        onClick={[Function]}
                        tag="button"
                      >
                        <button
                          className="btn btn-link"
                          onClick={[Function]}
                          type="button"
                        >
                          Contact Us
                        </button>
                      </Button>
                    </div>
                  </CardFooter>
                </div>
              </Card>
            </Plan>
          </div>
        </CardDeck>
        <div
          style={
            Object {
              "maxWidth": 900,
            }
          }
        >
          <h3
            className="mb-4"
          >
            Frequently asked questions
          </h3>
          <Row
            className="faq"
            tag="div"
          >
            <div
              className="faq row"
            >
              <Col
                sm={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col col-sm-6"
                >
                  <dl>
                    <dt>
                      What's a ticket?
                    </dt>
                    <dd>
                      A ticket is a conversation with a customer, on any channel. It can be on email, phone, chat, etc.
                      <br />
                      Usage only includes tickets that contain a response sent from Gorgias.
                    </dd>
                    <dt>
                      Do I need to pay for all tickets received?
                    </dt>
                    <dd>
                      No! You only pay for tickets that contain a response sent from Gorgias.
                    </dd>
                    <dt>
                      Do I need to pay extra for chat?
                    </dt>
                    <dd>
                      No, all channels are included. You can connect as many chat widgets, facebook pages, and email addresses as you want.
                    </dd>
                  </dl>
                </div>
              </Col>
              <Col
                sm={6}
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col col-sm-6"
                >
                  <dl>
                    <dt>
                      I don’t know how many tickets I get per month. Can you help?
                    </dt>
                    <dd>
                      Sure. You probably receive about 1,000 tickets for each agent in your team. So if you’re paying for 5 seats with your current helpdesk, you’d pay for 5,000 tickets with Gorgias.
                    </dd>
                    <dt>
                      What level of support is included in my plan?
                    </dt>
                    <dd>
                      We provide all our customers with the same level of support. We're available 9am-7pm PST, over live chat & email.
                    </dd>
                    <dt>
                      I need help integrating an app with Gorgias. Is that included in my plan?
                    </dt>
                    <dd>
                      Yes. We're happy to help you add your own integrations at no additional cost.
                    </dd>
                  </dl>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </div>
    </Container>
  </div>
</BillingPlans>
`;
